--- a/dashboard/templates/dashboard/notice_create.html
+++ b/dashboard/templates/dashboard/notice_create.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico">
     <title>uicCourse | Create/Modify Notice</title>
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" crossorigin="anonymous" />
     <!-- Custom styles for this template -->
     <style type="text/css">
         /* Sticky footer styles
@@ -62,7 +62,7 @@
     {% endif %}
 </main>
 {% include "index/footer.html" %}
-<script src="https://cdn.bootcss.com/limonte-sweetalert2/7.11.0/sweetalert2.all.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.29.0/sweetalert2.all.min.js" integrity="sha256-FABHlNZdWEEvD1Ge8L18a01NTTLNiZ4uD8hdl5QG5BI=" crossorigin="anonymous"></script>
 {% if notice_id %}
 <script>
     function AlertIt() {
