--- a/dashboard/templates/auth/signup.html
+++ b/dashboard/templates/auth/signup.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico">
     <title>uicCourse | Signup</title>
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" crossorigin="anonymous" />
     <!-- Custom styles for this template -->
     <style type="text/css">
         /* Sticky footer styles
