--- a/search/templates/index/header.html
+++ b/search/templates/index/header.html
@@ -9,8 +9,8 @@
 
             <div class="collapse navbar-collapse" id="topNavigationBar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'welcome_page' %}">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'welcome_page' %}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'course_list_page' %}">Course</a>
