--- a/dashboard/templates/index/privacy.html
+++ b/dashboard/templates/index/privacy.html
@@ -34,9 +34,20 @@
 {% include "index/header.html" %}
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
-    <h1 class="mt-md-3">uicCourse | Privacy Statement</h1>
-    <p>Holding onto your private information is a serious responsibility, and we want you to know how we're handling
-        it.</p>
+    <h1 class="mt-md-3">uicCourse | 隐私</h1>
+    <p>uicCourse 网站 (后简称为 “网站”) 托管于云服务器中，由 UIC-HCC 计算机俱乐部 (后简称为 “我们”) 维护。使用和 / 或访问本网站，说明您已经同意遵守我们有关隐私和使用条款的规定。请仔细阅读。</p>
+    <h4>信息收集</h4>
+    <p>我们的网站中使用了第三方服务用于分发我们网站上使用的文件。这些服务可能会收集你的信息，包括但不限于：设备信息，操作记录；我们无法通过第三方服务提供商获取这些信息。下面我们列出了我们所使用的第三方服务：</p>
+    <ul>
+        <li>cdnjs 网页前端 CDN 服务</li>
+    </ul>
+    <p>我们的服务器会记录用户的访问时间和客户端 IP。</p>
+    <h4>用户账号</h4>
+    <p>如果你选择在网站中注册账户并使用相关功能，我们需要你填写用户名，邮箱和密码（姓名为选填项）。用户名用做登陆用户名，唯一且无法更改。密码我们会使用非对称加密，并且不在任何位置储存原始密码。邮箱将用于向用户通知信息。</p>
+    <h4>网站服务操作记录</h4>
+    <p>当你在网站内对课程进行评价时（赞踩或标签功能），后台会记录操作的时间，操作的信息和操作的用户。这些信息将会严格保密。</p>
+    <h4>删除账户</h4>
+    <p>如果你想要将你在本网站的账户删除，请联系网站管理员：uic-course@uichcc.com</p>
 </main>
 {% include "index/footer.html" %}
 </body>
