--- a/dashboard/templates/index/privacy.html
+++ b/dashboard/templates/index/privacy.html
@@ -45,7 +45,7 @@
     <h4>用户账号</h4>
     <p>如果你选择在网站中注册账户并使用相关功能，我们需要你填写用户名，邮箱和密码（姓名为选填项）。用户名用做登陆用户名，唯一且无法更改。密码我们会使用非对称加密，并且不在任何位置储存原始密码。邮箱将用于向用户通知信息。</p>
     <h4>网站服务操作记录</h4>
-    <p>当你在网站内对课程进行评价时（赞踩或标签功能），后台会记录操作的时间，操作的信息和操作的用户。这些信息将会严格保密。</p>
+    <p>当你在网站内对课程进行评价时（赞踩或标签功能），后台会记录操作的时间，操作的信息和操作的用户。</p>
     <h4>删除账户</h4>
     <p>如果你想要将你在本网站的账户删除，请联系网站管理员：uic-course@uichcc.com</p>
 </main>
