--- a/dashboard/templates/index/terms.html
+++ b/dashboard/templates/index/terms.html
@@ -34,9 +34,16 @@
 {% include "index/header.html" %}
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
-    <h1 class="mt-md-3">uicCourse | Terms of Service</h1>
-    <p>Please read this Terms of Service agreement carefully before accessing or using uicCourse. Because it is such an
-        important contract between us and our users, we have tried to make it as clear as possible.</p>
+    <h1 class="mt-md-3">uicCourse | 服务条款</h1>
+    <p>在访问或使用 uicCourse 之前，请仔细阅读本服务条款协议。 因为它是我们和用户之间非常重要的合同，所以我们尽量使其尽可能清晰。</p>
+    <p class="text-muted">本条款只适用于 UIC-HCC 计算机俱乐部 提供的 uicCourse 服务。</p>
+    <ol>
+        <li><b>网站信息来源于网络，我们不保证所提供信息的准确性，资讯仅供参考。</b></li>
+        <li>用户在 uicCourse 发表的内容仅表明其个人的立场和观点，并不代表 uicCourse 或 UIC-HCC 计算机俱乐部 的立场或观点。作为内容的发表者，需自行对所发表内容负责，因所发表内容引发的一切纠纷，由该内容的发表者承担全部法律及连带责任。uicCourse 和 UIC-HCC 计算机俱乐部 不承担任何法律及连带责任。</li>
+        <li>您需要注册帐户才能使用我们的某些服务。</li>
+        <li>不要滥用我们的服务，例如，不要干扰我们的服务或尝试使用除接口和我们提供的说明之外的方法来访问它们。如果您不遵守我们的条款或政策，或者我们正在调查可疑的不当行为，我们可能会暂停或停止向您提供服务。</li>
+        <li>若用户对本协议的任何条款存在异议，请停止使用 uicCourse 所提供的全部服务。</li>
+    </ol>
 </main>
 {% include "index/footer.html" %}
 </body>
