--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -137,7 +137,7 @@
                     </li>
                     <li class="page-item">
 
-                        <a class="page-link" href="?{% url_replace page=courses.paginator.number_pages %}" aria-label="Next">
+                        <a class="page-link" href="?{% url_replace page=courses.paginator.num_pages %}" aria-label="Next">
                             <span aria_hidden="true">&raquo;</span>
                         </a>
                     </li>
