--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -116,7 +116,7 @@
             <ul class="pagination justify-content-center">
                 {% if courses.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page=1" aria-label="Previous">
+                        <a class="page-link" href="?{% url_replace page=1 %}" aria-label="Previous">
                             <span aria_hidden="true">&laquo;</span></a>
                     </li>
                     <li class="page-item">
