--- a/search/templates/index/footer.html
+++ b/search/templates/index/footer.html
@@ -1,16 +1,21 @@
-<footer style="position: absolute; bottom: 0; width: 100%; height: 60px; line-height: 60px; background-color: #f5f5f5;">
-    <div class="container d-flex justify-content-between">
-        <span class="text-muted">A <a href="https://uichcc.com">UICHCC Computer Club</a> Project</span>
-        <span class="text-muted"><a href="{% url 'terms_page' %}">Terms</a> · <a href="{% url 'privacy_page' %}">Privacy</a></span>
-    </div>
-</footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.5/umd/popper.min.js" integrity="sha256-VTBbuQQf3bpp1u7pm5VrsWn+Wn6chOiW2U1dOMBg9Zs=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha256-VsEqElsCHSGmnmHXGQzvoWjWwoznFSZc6hs7ARLRacQ=" crossorigin="anonymous"></script>
+<div class="container my-4">
+    <footer>
+        <div class="float-lg-right">
+            <span class="text-muted"><a href="{% url 'terms_page' %}">Terms</a> · <a href="{% url 'privacy_page' %}">Privacy</a></span>
+        </div>
+        <p>A <a href="https://uichcc.com">UICHCC Computer Club</a> Project</p>
+    </footer>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.5/umd/popper.min.js"
+        integrity="sha256-VTBbuQQf3bpp1u7pm5VrsWn+Wn6chOiW2U1dOMBg9Zs=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha256-VsEqElsCHSGmnmHXGQzvoWjWwoznFSZc6hs7ARLRacQ=" crossorigin="anonymous"></script>
 <script>
-    window.setTimeout(function() {
-    $(".alert").fadeTo(500, 0).slideUp(500, function(){
-        $(this).remove();
-    });
-}, 2000);
+    window.setTimeout(function () {
+        $(".alert").fadeTo(500, 0).slideUp(500, function () {
+            $(this).remove();
+        });
+    }, 2000);
 </script>
