fix homepage overflow problem

--- a/dashboard/templates/index/index.html
+++ b/dashboard/templates/index/index.html
@@ -41,7 +41,7 @@
 <body>
 {% include "index/header.html" %}
 {% include "index/messager.html" %}
-<main role="main" class="container mb-5">
+<main role="main" class="container mb-5" style="position: relative; overflow: hidden">
     <div style="position: absolute;left: 50%;width: 1373px;height: 708px;margin-left: -686.5px; z-index: -1">
         <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="363 45.8 1338 702.2" id="appreciated_beam" width="100%"
              height="100%">
