--- a/dashboard/templates/index/index.html
+++ b/dashboard/templates/index/index.html
@@ -84,7 +84,7 @@
         </svg>
     </div>
     <h1 class="mt-md-3">uicCourse</h1>
-    <p class="lead">For a more transparent future.</p>
+    <p class="lead">A course information query system for you.</p>
     <form class="my-4" action="{% url 'search_course' %}">
         <input class="form-control transp_input" type="text" placeholder="Search a course to start..."
                autocomplete="off" name="search"
