--- a/search/templates/index/header.html
+++ b/search/templates/index/header.html
@@ -18,6 +18,9 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Report</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'handbook_home' %}">Handbook</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     {% if user.is_anonymous %}
