create new report module

--- a/dashboard/templates/index/header.html
+++ b/dashboard/templates/index/header.html
@@ -16,7 +16,7 @@
                         <a class="nav-link" href="{% url 'course_list_page' %}">Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Report</a>
+                        <a class="nav-link" href="{% url 'report' %}">Report</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'handbook_home' %}">Handbook</a>
