--- a/handbook/templates/handbook/header.html
+++ b/handbook/templates/handbook/header.html
@@ -16,7 +16,7 @@
                         <a class="nav-link" href="{% url 'course_list_page' %}">Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Report</a>
+                        <a class="nav-link" href="{% url 'report' %}">Report</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url 'handbook_home' %}">Handbook <span class="sr-only">(current)</span></a>
