--- a/report/templates/report/header.html
+++ b/report/templates/report/header.html
@@ -16,7 +16,7 @@
                         <a class="nav-link" href="{% url 'course_list_page' %}">Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'report' %}">Report</a>
+                        <a class="nav-link active" href="{% url 'report' %}">Report <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'handbook_home' %}">Handbook</a>
